# TDNET_NYUD

./: .gitignore  CMakeLists.txt  dataloader.py  package.xml  preprocessor.py  segmentation.py  test.py
launch/: rviz_config.rviz  test.launch
model/pspnet/: td2_psp50.py  td4_psp18.py
